Progressing slowly Making sure there's a GB general understanding of the emulator. More stuff to follow soon!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 {
     "files.exclude": {
       "**/scripts/*.js.map": true,
-      "**/scripts/*.js": true
+      "**/scripts/*.js": true,
+      "**/node_modules" : true
     }
 }
