--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
 // By now we'll leave the default settings, excluding the js files for VS Code
 {
     "files.exclude": {
-      "**/scripts/*.js.map": true,
-      "**/scripts/*.js": true,
+      "src/**/scripts/*.js.map": true,
+      "src/**/scripts/*.js": true,
       "**/node_modules" : true
     }
 }
